# SimpleNeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp  Statistics.hpp  Util.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
